--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <section>
     <h2>📚 Kindle Books</h2>
-    <a href="https://www.amazon.com/your-book-link">View on Amazon</a>
+    <a href="https://www.amazon.com/your-book-link">https://a.co/d/0a0wCUu</a>
   </section>
 
   <section>
