--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
   </section>
 
   <section>
-    <h2>📚 Kindle Books</h2>
-    <a href="https://www.amazon.com/your-book-link">https://a.co/d/0a0wCUu</a>
+<img src="https://your-image-host.com/book-cover.jpg" alt="Souled-out Life Book Cover" width="200">
   </section>
 
   <section>
