--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <p>Explore our latest reflections and teachings.</p>
   </section>
 
-  <section>
-https://github.com/souledout326-stack/Souled-out-life-/blob/main/i%20believe%202.png
-  </section>
-
+ <section>
+  <img src="https://github.com/souledout326-stack/Souled-out-life-/blob/main/i%20believe%202.png?raw=true" alt="Souled-out Life Book Cover" width="200">
+</section>
+  
   <section>
     <h2>📹 YouTube Teachings</h2>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/your-video-id" frameborder="0" allowfullscreen></iframe>
