--- a/index.html
+++ b/index.html
@@ -31,12 +31,19 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/8iv4QnNLe5M" frameborder="0" allowfullscreen></iframe>
   </section>
 
-  <section>
-    <h2>📩 Join the Movement</h2>
-    <form action="https://formspree.io/f/your-form-id" method="POST">
-      <input type="email" name="email" placeholder="Your email" required>
-      <button type="submit">Sign Up</button>
-    </form>
-  </section>
-</body>
-</html>
+  <section style="background-color: #f9f9f9; padding: 20px; border-radius: 8px;">
+  <h2>📩 Join the Movement</h2>
+  <p>Be part of a Spirit-led journey. Sign up to receive devotionals, updates, and encouragement straight to your inbox.</p>
+
+  <form action="https://formspree.io/f/mwpnyngz" method="POST" style="max-width: 400px; margin: auto;">
+    <label for="email">Your email:</label><br>
+    <input type="email" name="email" id="email" placeholder="you@example.com" required style="width: 100%; padding: 8px; margin: 8px 0;"><br>
+
+    <label for="message">Your message (optional):</label><br>
+    <textarea name="message" id="message" rows="4" placeholder="Share a prayer request or encouragement..." style="width: 100%; padding: 8px; margin: 8px 0;"></textarea><br>
+
+    <button type="submit" style="background-color: #d35400; color: white; padding: 10px 20px; border: none; border-radius: 4px;">Sign Up</button>
+  </form>
+
+  <p style="text-align: center; margin-top: 10px; font-size: 0.9em;">🙏 We respect your inbox. No spam, just soul food.</p>
+</section>
