--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
   </header>
 
   <section>
+  <h2>📘 Featured Book</h2>
+  <p><strong>I Believe</strong> — A Spirit-led journey into the heart of faith and action.</p>
+</section>
+
+  <section>
     <h2>📖 Devotionals</h2>
     <p>Explore our latest reflections and teachings.</p>
   </section>
