--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <section>
   <h2>📘 Featured Book</h2>
-  <p><strong>I Believe</strong> — A Spirit-led journey into the heart of faith and action.</p>
+  <img src="https://github.com/souledout326-stack/Souled-out-life-/blob/main/i%20believe%202.png?raw=true" alt="I Believe Book Cover" width="200">
 </section>
 
   <section>
