--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
   </header>
 
   <section>
-  <h2>📘 Featured Book</h2>
+  <div style="text-align: center;">
   <img src="https://github.com/souledout326-stack/Souled-out-life-/blob/main/i%20believe%202.png?raw=true" alt="I Believe Book Cover" width="200">
+</div>
+
 </section>
 
   <section>
