--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <section>
   <div style="text-align: center;">
   <img src="https://github.com/souledout326-stack/Souled-out-life-/blob/main/i%20believe%202.png?raw=true" alt="I Believe Book Cover" width="200">
-  <p><a href="https://www.amazon.com/dp/B0CXYZ1234" target="_blank" style="background-color: #d35400; color: white; padding: 10px 20px; text-decoration: none; border-radius: 4px; display: inline-block;">📖 Get it on Kindle</a></p>
+  <p><a href="https://www.amazon.com/dp/B0FMHJFPQ1" target="_blank" style="background-color: #d35400; color: white; padding: 10px 20px; text-decoration: none; border-radius: 4px; display: inline-block;">📖 Get it on Kindle</a></p>
   </section>
 
   <section>
