--- a/index.html
+++ b/index.html
@@ -28,10 +28,17 @@
     <p>Explore our latest reflections and teachings.</p>
   </section>
 
-<section>
-  <img src="https://github.com/souledout326-stack/Souled-out-life-/blob/main/i%20believe%202.png?raw=true" alt="Souled-out Life Book Cover" width="200">
+  <section>
+  <h2>📚 Book Archive</h2>
+  <p>Explore past releases and timeless truths from Souled-out Life.</p>
+
+  <ul>
+    <li><strong>I Believe</strong> – 2025<br>
+      <a href="https://www.amazon.com/dp/B0FMHJFPQ1" target="_blank">Read on Kindle</a>
+    </li>
+  </ul>
 </section>
-  
+ 
   <section>
     <h2>📹 YouTube Teachings</h2>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/8iv4QnNLe5M" frameborder="0" allowfullscreen></iframe>
