--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
   <ul>
     <li><strong>I Believe</strong> – 2025<br>
+      <img src="https://github.com/souledout326-stack/Souled-out-life-/blob/main/i%20believe%202.png?raw=true" alt="I Believe Book Cover" width="200">
       <a href="https://www.amazon.com/dp/B0FMHJFPQ1" target="_blank">Read on Kindle</a>
     </li>
   </ul>
