--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
      <img src="https://github.com/souledout326-stack/Souled-out-life-/blob/main/i%20believe%202.png?raw=true" alt="I Believe Book Cover" width="200">
      <p><a href="https://www.amazon.com/dp/B0FMHJFPQ1" target="_blank" style="background-color: #d35400; color: white; padding: 10px 20px; text-decoration: none; border-radius: 4px; display: inline-block;">📖 Get it on Kindle</a></p>
     </li>
-    <li><strong>Souled-out Life</strong> – 2023<br>
+    <li><strong>Grace upon Grace</strong> – 2023<br>
   <a href="https://www.amazon.com/dp/B0FJ24JQ1K" target="_blank">Read on Kindle</a>
 </li>
   </ul>
