--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
      <p><a href="https://www.amazon.com/dp/B0FMHJFPQ1" target="_blank" style="background-color: #d35400; color: white; padding: 10px 20px; text-decoration: none; border-radius: 4px; display: inline-block;">📖 Get it on Kindle</a></p>
     </li>
    <li>
-    <strong>Grace upon Grace</strong> – 2023<br>
-    <img src="https://github.com/souledout326-stack/Souled-out-life-/blob/main/grace-upon-grace.png?raw=true" alt="Grace upon Grace Book Cover" width="150"><br>
-    <p><a href="https://www.amazon.com/dp/B0FMHJFPQ1" target="_blank" style="background-color: #d35400; color: white; padding: 10px 20px; text-decoration: none; border-radius: 4px; display: inline-block;">📖 Get it on Kindle</a></p>
-   </li>
+  <strong>Grace upon Grace</strong> – 2023<br>
+  <img src="https://github.com/souledout326-stack/Souled-out-life-/blob/main/grace-upon-grace.png?raw=true" alt="Grace upon Grace Book Cover" width="150"><br>
+  <p><a href="https://www.amazon.com/dp/B0FJ24JQ1K" target="_blank" style="background-color: #d35400; color: white; padding: 10px 20px; text-decoration: none; border-radius: 4px; display: inline-block;">📖 Get it on Kindle</a></p>
+</li>
   </ul>
 </section>
  
