--- a/index.html
+++ b/index.html
@@ -32,17 +32,19 @@
   <h2>📚 Book Archive</h2>
   <p>Explore past releases and timeless truths from Souled-out Life.</p>
 
-  <ul>
-    <li><strong>I Believe</strong> – 2025<br>
-     <img src="https://github.com/souledout326-stack/Souled-out-life-/blob/main/i%20believe%202.png?raw=true" alt="I Believe Book Cover" width="200">
-     <p><a href="https://www.amazon.com/dp/B0FMHJFPQ1" target="_blank" style="background-color: #d35400; color: white; padding: 10px 20px; text-decoration: none; border-radius: 4px; display: inline-block;">📖 Get it on Kindle</a></p>
-    </li>
-   <li>
-  <strong>Grace upon Grace</strong> – 2023<br>
-  <img src="https://github.com/souledout326-stack/Souled-out-life-/blob/main/Grace upon grace 2.png?raw=true" alt="Grace upon Grace Book Cover" width="150"><br>
-  <p><a href="https://www.amazon.com/dp/B0FJ24JQ1K" target="_blank" style="background-color: #d35400; color: white; padding: 10px 20px; text-decoration: none; border-radius: 4px; display: inline-block;">📖 Get it on Kindle</a></p>
-</li>
-  </ul>
+  <div style="display: flex; gap: 40px; flex-wrap: wrap;">
+    <div style="text-align: center; max-width: 200px;">
+      <strong>I Believe</strong> – 2025<br>
+      <img src="https://github.com/souledout326-stack/Souled-out-life-/blob/main/i%20believe%202.png?raw=true" alt="I Believe Book Cover" width="200"><br>
+      <a href="https://www.amazon.com/dp/B0FMHJFPQ1" target="_blank" style="background-color: #d35400; color: white; padding: 10px 20px; text-decoration: none; border-radius: 4px; display: inline-block;">📖 Get it on Kindle</a>
+    </div>
+
+    <div style="text-align: center; max-width: 200px;">
+      <strong>Grace upon Grace</strong> – 2023<br>
+      <img src="https://github.com/souledout326-stack/Souled-out-life-/blob/main/grace-upon-grace.png?raw=true" alt="Grace upon Grace Book Cover" width="150"><br>
+      <a href="https://www.amazon.com/dp/B0FJ24JQ1K" target="_blank" style="background-color: #d35400; color: white; padding: 10px 20px; text-decoration: none; border-radius: 4px; display: inline-block;">📖 Get it on Kindle</a>
+    </div>
+  </div>
 </section>
  
   <section>
