--- a/index.html
+++ b/index.html
@@ -28,21 +28,23 @@
     <p>Explore our latest reflections and teachings.</p>
   </section>
 
-  <section>
+ <section>
   <h2>📚 Book Archive</h2>
   <p>Explore past releases and timeless truths from Souled-out Life.</p>
 
-  <div style="display: flex; gap: 40px; flex-wrap: wrap;">
-    <div style="text-align: center; max-width: 200px;">
+  <div style="display: flex; gap: 40px; flex-wrap: wrap; justify-content: center;">
+    <!-- I Believe -->
+    <div style="text-align: center; max-width: 220px;">
       <strong>I Believe</strong> – 2025<br>
       <img src="https://github.com/souledout326-stack/Souled-out-life-/blob/main/i%20believe%202.png?raw=true" alt="I Believe Book Cover" width="200"><br>
-      <a href="https://www.amazon.com/dp/B0FMHJFPQ1" target="_blank" style="background-color: #d35400; color: white; padding: 10px 20px; text-decoration: none; border-radius: 4px; display: inline-block;">📖 Get it on Kindle</a>
+      <a href="https://www.amazon.com/dp/B0FMHJFPQ1" target="_blank" style="background-color: #d35400; color: white; padding: 10px 20px; text-decoration: none; border-radius: 4px; display: inline-block; margin-top: 10px;">📖 Get it on Kindle</a>
     </div>
 
-    <div style="text-align: center; max-width: 200px;">
+    <!-- Grace upon Grace -->
+    <div style="text-align: center; max-width: 220px;">
       <strong>Grace upon Grace</strong> – 2023<br>
-      <img src="https://github.com/souledout326-stack/Souled-out-life-/blob/main/grace-upon-grace.png?raw=true" alt="Grace upon Grace Book Cover" width="150"><br>
-      <a href="https://www.amazon.com/dp/B0FJ24JQ1K" target="_blank" style="background-color: #d35400; color: white; padding: 10px 20px; text-decoration: none; border-radius: 4px; display: inline-block;">📖 Get it on Kindle</a>
+      <img src="https://github.com/souledout326-stack/Souled-out-life-/blob/main/Grace%20upon%20grace%202.png?raw=true" alt="Grace upon Grace Book Cover" width="200"><br>
+      <a href="https://www.amazon.com/dp/B0FJ24JQ1K" target="_blank" style="background-color: #d35400; color: white; padding: 10px 20px; text-decoration: none; border-radius: 4px; display: inline-block; margin-top: 10px;">📖 Get it on Kindle</a>
     </div>
   </div>
 </section>
