--- a/index.html
+++ b/index.html
@@ -28,9 +28,13 @@
     <p>Explore our latest reflections and teachings.</p>
   </section>
 
- <section>
-  <h2>📚 Book Archive</h2>
-  <p>Explore past releases and timeless truths from Souled-out Life.</p>
+<section>
+  <h2 style="font-size: 2em; color: #2c3e50; text-align: center; margin-bottom: 10px; font-family: 'Segoe UI', sans-serif;">
+    📚 Book Archive
+  </h2>
+  <p style="text-align: center; font-size: 1.1em; color: #555; margin-bottom: 30px; font-family: 'Segoe UI', sans-serif;">
+    Explore past releases and timeless truths from Souled-out Life.
+  </p>
 
   <div style="display: flex; gap: 40px; flex-wrap: wrap; justify-content: center;">
     <!-- I Believe -->
