--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <p>Explore our latest reflections and teachings.</p>
   </section>
 
-<section>
+<section style="background-color: #f9f9f9; padding: 40px 20px; border-radius: 8px;">
   <h2 style="font-size: 2em; color: #2c3e50; text-align: center; margin-bottom: 10px; font-family: 'Segoe UI', sans-serif;">
     📚 Book Archive
   </h2>
@@ -37,14 +37,14 @@
   </p>
 
   <div style="display: flex; gap: 40px; flex-wrap: wrap; justify-content: center;">
-    <!-- I Believe -->
+    <!-- Book 1 -->
     <div style="text-align: center; max-width: 220px;">
       <strong>I Believe</strong> – 2025<br>
       <img src="https://github.com/souledout326-stack/Souled-out-life-/blob/main/i%20believe%202.png?raw=true" alt="I Believe Book Cover" width="200"><br>
       <a href="https://www.amazon.com/dp/B0FMHJFPQ1" target="_blank" style="background-color: #d35400; color: white; padding: 10px 20px; text-decoration: none; border-radius: 4px; display: inline-block; margin-top: 10px;">📖 Get it on Kindle</a>
     </div>
 
-    <!-- Grace upon Grace -->
+    <!-- Book 2 -->
     <div style="text-align: center; max-width: 220px;">
       <strong>Grace upon Grace</strong> – 2023<br>
       <img src="https://github.com/souledout326-stack/Souled-out-life-/blob/main/Grace%20upon%20grace%202.png?raw=true" alt="Grace upon Grace Book Cover" width="200"><br>
