--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </section>
 
 <section style="background-color: #f9f9f9; padding: 40px 20px; border-radius: 8px;">
-  <h2 style="font-size: 2em; color: #2c3e50; text-align: center; margin-bottom: 10px; font-family: 'Segoe UI', sans-serif;">
+  <section style="background-color: #f0f4f8; padding: 40px 20px; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.05);">
     📚 Book Archive
   </h2>
   <p style="text-align: center; font-size: 1.1em; color: #555; margin-bottom: 30px; font-family: 'Segoe UI', sans-serif;">
