--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
   </div>
 </section>
- 
+ <hr style="border: none; height: 1px; background-color: #ccc; margin: 40px 0;">
   <section>
     <h2>📹 YouTube Teachings</h2>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/8iv4QnNLe5M" frameborder="0" allowfullscreen></iframe>
