--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
   <img src="https://github.com/souledout326-stack/Souled-out-life-/blob/main/i%20believe%202.png?raw=true" alt="I Believe Book Cover" width="200">
   <p><a href="https://www.amazon.com/dp/B0FMHJFPQ1" target="_blank" style="background-color: #d35400; color: white; padding: 10px 20px; text-decoration: none; border-radius: 4px; display: inline-block;">📖 Get it on Kindle</a></p>
   </section>
-
+<hr style="border: none; height: 1px; background-color: #ccc; margin: 40px 0;">
   <section>
     <h2>📖 Devotionals</h2>
     <p>Explore our latest reflections and teachings.</p>
   </section>
-
+<hr style="border: none; height: 1px; background-color: #ccc; margin: 40px 0;">
 <section style="background-color: #f0f4f8; padding: 40px 20px; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.05);">
   <h2 style="font-size: 2em; color: #2c3e50; text-align: center; margin-bottom: 10px; font-family: 'Segoe UI', sans-serif;">
     📚 Book Archive
@@ -57,7 +57,7 @@
     <h2>📹 YouTube Teachings</h2>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/8iv4QnNLe5M" frameborder="0" allowfullscreen></iframe>
   </section>
-
+<hr style="border: none; height: 1px; background-color: #ccc; margin: 40px 0;">
   <section style="background-color: #f9f9f9; padding: 20px; border-radius: 8px;">
   <h2>📩 Join the Movement</h2>
   <p>Be part of a Spirit-led journey. Sign up to receive devotionals, updates, and encouragement straight to your inbox.</p>
