--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </p>
 
   <div style="background-color: #ffffff; border-radius: 8px; padding: 20px; max-width: 700px; margin: 0 auto; box-shadow: 0 2px 8px rgba(0,0,0,0.05);">
-    <img src="https://github.com/souledout326-stack/Souled-out-life-/blob/main/message-image.png?raw=true" alt="Weekly Message Image" style="width: 100%; border-radius: 6px; margin-bottom: 15px;">
+    <img src="https://github.com/souledout326-stack/Souled-out-life-/blob/main/message%20dove%20.png?raw=true" alt="Message for the Week Dove Image" style="width: 100%; max-width: 700px; border-radius: 6px; margin-bottom: 15px;">
     <h3 style="color: #d35400;">Grace in the Middle</h3>
     <p style="color: #333; font-size: 1em; line-height: 1.6;">
       This week, remember that grace doesn’t wait for perfection — it meets us in the middle of our mess. Whether you’re tired, uncertain, or just holding on, His strength is made perfect in weakness.
