--- a/index.html
+++ b/index.html
@@ -24,23 +24,24 @@
   </section>
 <hr style="border: none; height: 1px; background-color: #ccc; margin: 40px 0;">
   
-  <section style="background-color: #fffaf3; padding: 40px 20px; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.05); margin-top: 60px;">
-  <h2 style="text-align: center; font-size: 2em; color: #8e44ad; margin-bottom: 10px; font-family: 'Segoe UI', sans-serif;">
-    📝 Message for the Week
-  </h2>
-  <p style="text-align: center; font-size: 1.1em; color: #555; margin-bottom: 30px; font-family: 'Segoe UI', sans-serif;">
-    A fresh word, a real moment, and a visual reminder of grace.
+ <div style="
+  background-image: url('https://github.com/souledout326-stack/Souled-out-life-/blob/main/message%20dove%20.png?raw=true');
+  background-size: cover;
+  background-position: center;
+  padding: 40px;
+  border-radius: 8px;
+  max-width: 700px;
+  margin: 0 auto;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+  color: #fff;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.6);
+">
+  <h3 style="color: #fff;">Grace in the Middle</h3>
+  <p style="font-size: 1em; line-height: 1.6;">
+    This week, remember that grace doesn’t wait for perfection — it meets us in the middle of our mess. Whether you’re tired, uncertain, or just holding on, His strength is made perfect in weakness.
   </p>
-
-  <div style="background-color: #ffffff; border-radius: 8px; padding: 20px; max-width: 700px; margin: 0 auto; box-shadow: 0 2px 8px rgba(0,0,0,0.05);">
-    <img src="https://github.com/souledout326-stack/Souled-out-life-/blob/main/message%20dove%20.png?raw=true" alt="Message for the Week Dove Image" style="width: 100%; max-width: 700px; border-radius: 6px; margin-bottom: 15px;">
-    <h3 style="color: #d35400;">Grace in the Middle</h3>
-    <p style="color: #333; font-size: 1em; line-height: 1.6;">
-      This week, remember that grace doesn’t wait for perfection — it meets us in the middle of our mess. Whether you’re tired, uncertain, or just holding on, His strength is made perfect in weakness.
-    </p>
-    <p style="font-style: italic; color: #666; margin-top: 15px;">“My grace is sufficient for you, for my power is made perfect in weakness.” – 2 Corinthians 12:9</p>
-  </div>
-</section>
+  <p style="font-style: italic; margin-top: 15px;">2 Corinthians 12:9</p>
+</div>
   
 <hr style="border: none; height: 1px; background-color: #ccc; margin: 40px 0;">
 <section style="background-color: #f0f4f8; padding: 40px 20px; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.05);">
