--- a/index.html
+++ b/index.html
@@ -28,19 +28,20 @@
   background-image: url('https://github.com/souledout326-stack/Souled-out-life-/blob/main/message%20dove%20.png?raw=true');
   background-size: cover;
   background-position: center;
-  padding: 40px;
-  border-radius: 8px;
-  max-width: 700px;
+  background-repeat: no-repeat;
+  padding: 60px 40px;
+  border-radius: 12px;
+  max-width: 900px;
   margin: 0 auto;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+  box-shadow: 0 4px 16px rgba(0,0,0,0.1);
   color: #fff;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.6);
+  text-shadow: 1px 1px 4px rgba(0,0,0,0.6);
 ">
-  <h3 style="color: #fff;">Grace in the Middle</h3>
-  <p style="font-size: 1em; line-height: 1.6;">
+  <h3 style="font-size: 1.8em; margin-bottom: 20px;">Grace in the Middle</h3>
+  <p style="font-size: 1.1em; line-height: 1.8;">
     This week, remember that grace doesn’t wait for perfection — it meets us in the middle of our mess. Whether you’re tired, uncertain, or just holding on, His strength is made perfect in weakness.
   </p>
-  <p style="font-style: italic; margin-top: 15px;">2 Corinthians 12:9</p>
+  <p style="font-style: italic; margin-top: 20px;">2 Corinthians 12:9</p>
 </div>
   
 <hr style="border: none; height: 1px; background-color: #ccc; margin: 40px 0;">
