--- a/index.html
+++ b/index.html
@@ -29,21 +29,25 @@
   background-size: cover;
   background-position: top center;
   background-repeat: no-repeat;
-  padding: 80px 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding: 60px;
   border-radius: 12px;
   max-width: 1000px;
-  height: auto;
   min-height: 600px;
   margin: 0 auto;
   box-shadow: 0 4px 16px rgba(0,0,0,0.1);
   color: #fff;
   text-shadow: 1px 1px 4px rgba(0,0,0,0.6);
 ">
-  <h3 style="font-size: 2em; margin-bottom: 20px;">Grace in the Middle</h3>
-  <p style="font-size: 1.2em; line-height: 1.8;">
-    This week, remember that grace doesn’t wait for perfection — it meets us in the middle of our mess. Whether you’re tired, uncertain, or just holding on, His strength is made perfect in weakness.
-  </p>
-  <p style="font-style: italic; margin-top: 20px;">2 Corinthians 12:9</p>
+  <div style="background-color: rgba(0,0,0,0.4); padding: 20px; border-radius: 8px;">
+    <h3 style="font-size: 2em; margin-bottom: 15px;">Grace in the Middle</h3>
+    <p style="font-size: 1.2em; line-height: 1.8;">
+      This week, remember that grace doesn’t wait for perfection — it meets us in the middle of our mess. Whether you’re tired, uncertain, or just holding on, His strength is made perfect in weakness.
+    </p>
+    <p style="font-style: italic; margin-top: 15px;">2 Corinthians 12:9</p>
+  </div>
 </div>
   
 <hr style="border: none; height: 1px; background-color: #ccc; margin: 40px 0;">
