--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
   <p><a href="https://www.amazon.com/dp/B0FMHJFPQ1" target="_blank" style="background-color: #d35400; color: white; padding: 10px 20px; text-decoration: none; border-radius: 4px; display: inline-block;">📖 Get it on Kindle</a></p>
   </section>
 <hr style="border: none; height: 1px; background-color: #ccc; margin: 40px 0;">
-  
+
+<h2 style="text-align: center; font-size: 2.4em; color: #8e44ad; margin-bottom: 20px; font-family: 'Segoe UI', sans-serif;">
+  🕊️ Weekly Message
+</h2>
+<p style="text-align: center; font-style: italic; color: #8e44ad; font-size: 1.2em; margin-bottom: 40px; font-weight: 500;">
+  “Let your light so shine before men…” – Matthew 5:16
+</p>  
 <div style="
   background-image: url('https://github.com/souledout326-stack/Souled-out-life-/blob/main/message%20dove%20.png?raw=true');
   background-size: cover;
