--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
   </section>
 <hr style="border: none; height: 1px; background-color: #ccc; margin: 40px 0;">
 
-<h2 style="text-align: center; font-size: 2.4em; color: #ffffff; margin-bottom: 20px; font-family: 'Segoe UI', sans-serif; text-shadow: 1px 1px 4px rgba(0,0,0,0.5);">
+<h2 style="text-align: center; font-size: 2.4em; color: #2c003e; margin-bottom: 20px; font-family: 'Segoe UI', sans-serif; text-shadow: 1px 1px 3px rgba(0,0,0,0.4);">
   🕊️ Weekly Message
 </h2>
 
-<p style="text-align: center; font-style: italic; color: #f5f5f5; font-size: 1.2em; margin-bottom: 40px; font-weight: 600; text-shadow: 1px 1px 3px rgba(0,0,0,0.4);">
+<p style="text-align: center; font-style: italic; color: #3c3c3c; font-size: 1.2em; margin-bottom: 40px; font-weight: 600; text-shadow: 1px 1px 2px rgba(0,0,0,0.3);">
   “Let your light so shine before men…” – Matthew 5:16
+</p>
 </p>
 </p>  
 <div style="
