--- a/index.html
+++ b/index.html
@@ -13,9 +13,33 @@
 </head>
 <body>
   <header>
-    <h1>Welcome to Souled-out Life</h1>
-    <p>Faith. Purpose. Community.</p>
-  </header>
+  <h1>Welcome to Souled-out Life</h1>
+  <p>Faith. Purpose. Community.</p>
+</header>
+
+<!-- 🏠 Home Section -->
+<section id="home" style="padding: 60px 20px; background-color: #fffaf3;">
+  <h1 style="text-align: center; font-size: 2.8em; color: #4a148c; margin-bottom: 20px; font-family: 'Segoe UI', sans-serif;">
+    Welcome to Souled-out Life
+  </h1>
+
+  <p style="text-align: center; font-size: 1.2em; color: #555; max-width: 800px; margin: 0 auto 40px;">
+    A digital sanctuary where faith meets creativity. Whether you're seeking truth, encouragement, or just a moment to breathe — you're home.
+  </p>
+
+  <p style="text-align: center; font-size: 1.1em; color: #333; max-width: 800px; margin: 0 auto 40px;">
+    Our mission is to make faith accessible, relatable, and Spirit-led — through devotionals, videos, and weekly messages that speak to the soul.
+  </p>
+
+  <div style="text-align: center; margin-bottom: 50px;">
+    <a href="#weekly-message" style="background-color: #4a148c; color: #fff; padding: 12px 24px; border-radius: 6px; text-decoration: none; margin: 10px;">Read the Weekly Message</a>
+    <a href="#youtube" style="background-color: #d35400; color: #fff; padding: 12px 24px; border-radius: 6px; text-decoration: none; margin: 10px;">Watch on YouTube</a>
+  </div>
+
+  <p style="text-align: center; font-style: italic; color: #3c3c3c; font-size: 1.1em; margin-bottom: 20px;">
+    “We are the light of the world — called to shine, speak, and serve.” 
+  </p>
+</section>
 
   <section>
   <div style="text-align: center;">
