--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
   <h1>Welcome to Souled-out Life</h1>
   <p>Faith. Purpose. Community.</p>
 </header>
-
+<nav style="text-align: center; margin-bottom: 40px;">
+  <a href="#home" style="margin: 0 15px;">Home</a>
+  <a href="#weekly-message" style="margin: 0 15px;">Weekly Message</a>
+  <a href="#youtube" style="margin: 0 15px;">YouTube</a>
+  <a href="#kindle" style="margin: 0 15px;">Books</a>
+</nav>
 <!-- 🏠 Home Section -->
 <section id="home" style="padding: 60px 20px; background-color: #fffaf3;">
   <h1 style="text-align: center; font-size: 2.8em; color: #4a148c; margin-bottom: 20px; font-family: 'Segoe UI', sans-serif;">
