--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 </header>
 <nav style="text-align: center; margin-bottom: 40px;">
   <a href="#home" style="margin: 0 15px;">Home</a>
-  <a href="#weekly-message" style="margin: 0 15px;">Weekly Message</a>
-  <a href="#youtube" style="margin: 0 15px;">YouTube</a>
-  <a href="#kindle" style="margin: 0 15px;">Books</a>
+  <section id="weekly-message">
+  <section id="youtube">
+  <section id="kindle">
 </nav>
 <!-- 🏠 Home Section -->
 <section id="home" style="padding: 60px 20px; background-color: #fffaf3;">
