--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
   <h1>Welcome to Souled-out Life</h1>
   <p>Faith. Purpose. Community.</p>
 </header>
-<nav style="text-align: center; margin-bottom: 40px;">
-  <a href="#home" style="margin: 0 15px;">Home</a>
-  <section id="weekly-message">
-  <section id="youtube">
-  <section id="kindle">
+<nav style="text-align: center; margin-bottom: 40px; background-color: #4a148c; padding: 15px 0; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+  <a href="#home" style="margin: 0 20px; color: #fff; font-weight: bold; text-decoration: none; font-size: 1.1em;">Home</a>
+  <a href="#weekly-message" style="margin: 0 20px; color: #fff; font-weight: bold; text-decoration: none; font-size: 1.1em;">Weekly Message</a>
+  <a href="#youtube" style="margin: 0 20px; color: #fff; font-weight: bold; text-decoration: none; font-size: 1.1em;">YouTube</a>
+  <a href="#kindle" style="margin: 0 20px; color: #fff; font-weight: bold; text-decoration: none; font-size: 1.1em;">Books</a>
 </nav>
 <!-- 🏠 Home Section -->
 <section id="home" style="padding: 60px 20px; background-color: #fffaf3;">
