--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header style="width: 100%; margin: 0; padding: 0;">
   <img src="https://github.com/souledout326-stack/Souled-out-life-/blob/main/souledout-%20banner.png?raw=true"
        alt="Souled-out Life Banner"
-       style="width: 100%; max-height: 300px; object-fit: cover; display: block;">
+       style="width: 100%; height: auto; max-height: 180px; object-fit: contain; display: block;">
 </header>
 <nav style="text-align: center; margin-bottom: 40px; background-color: #4a148c; padding: 15px 0; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
   <a href="#home" style="margin: 0 20px; color: #fff; font-weight: bold; text-decoration: none; font-size: 1.1em;">Home</a>
