--- a/index.html
+++ b/index.html
@@ -127,19 +127,26 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/8iv4QnNLe5M" frameborder="0" allowfullscreen></iframe>
   </section>
 <hr style="border: none; height: 1px; background-color: #ccc; margin: 40px 0;">
+    
   <section style="background-color: #f9f9f9; padding: 20px; border-radius: 8px;">
-  <h2>📩 Join the Movement</h2>
-  <p>Be part of a Spirit-led journey. Sign up to receive devotionals, updates, and encouragement straight to your inbox.</p>
+    
+  <section id="contact" style="background-color: #f3f0ff; padding: 60px 20px; border-radius: 12px; max-width: 600px; margin: 60px auto;">
+  <h2 style="text-align: center; color: #4a148c; font-size: 2em; margin-bottom: 20px;">📩 Join the Movement</h2>
+  <p style="text-align: center; font-size: 1.1em; color: #333; margin-bottom: 30px;">
+    Be part of a Spirit-led journey. Receive devotionals, updates, and encouragement straight to your inbox — and feel free to share a prayer request or message of hope.
+  </p>
 
-  <form action="https://formspree.io/f/mwpnyngz" method="POST" style="max-width: 400px; margin: auto;">
-    <label for="email">Your email:</label><br>
-    <input type="email" name="email" id="email" placeholder="you@example.com" required style="width: 100%; padding: 8px; margin: 8px 0;"><br>
+  <form action="https://formspree.io/f/mwpnyngz" method="POST" style="display: flex; flex-direction: column; gap: 15px;">
+    <label for="email" style="font-weight: bold;">Your email:</label>
+    <input type="email" name="email" id="email" placeholder="you@example.com" required style="padding: 10px; border-radius: 6px; border: 1px solid #ccc;">
 
-    <label for="message">Your message (optional):</label><br>
-    <textarea name="message" id="message" rows="4" placeholder="Share a prayer request or encouragement..." style="width: 100%; padding: 8px; margin: 8px 0;"></textarea><br>
+    <label for="message" style="font-weight: bold;">Your message (optional):</label>
+    <textarea name="message" id="message" rows="4" placeholder="Share a prayer request or encouragement..." style="padding: 10px; border-radius: 6px; border: 1px solid #ccc;"></textarea>
 
-    <button type="submit" style="background-color: #d35400; color: white; padding: 10px 20px; border: none; border-radius: 4px;">Sign Up</button>
+    <button type="submit" style="background-color: #4a148c; color: white; padding: 12px; border: none; border-radius: 6px; font-weight: bold; cursor: pointer;">
+      Send & Subscribe
+    </button>
   </form>
 
-  <p style="text-align: center; margin-top: 10px; font-size: 0.9em;">🙏 We respect your inbox. No spam, just soul food.</p>
+  <p style="text-align: center; margin-top: 20px; font-size: 0.9em; color: #555;">🙏 We respect your inbox. No spam, just soul food.</p>
 </section>
