--- a/index.html
+++ b/index.html
@@ -150,3 +150,23 @@
 
   <p style="text-align: center; margin-top: 20px; font-size: 0.9em; color: #555;">🙏 We respect your inbox. No spam, just soul food.</p>
 </section>
+<footer style="background-color: #4a148c; color: white; padding: 40px 20px; text-align: center;">
+  <p style="font-size: 1.1em; margin-bottom: 10px;">
+    ✨ Souled-out Life — Living loud, loving deep, shining bright.
+  </p>
+
+  <p style="margin-bottom: 20px;">
+    📧 <a href="mailto:souledoutlife@gmail.com" style="color: #ffddee; text-decoration: underline;">souledoutlife@gmail.com</a>
+  </p>
+
+  <div style="margin-bottom: 20px;">
+    <a href="https://www.youtube.com/@souled-outlife" target="_blank" style="margin: 0 10px; color: #ffddee; font-weight: bold;">YouTube</a>
+    <a href="https://www.instagram.com/_souled_out_life_?igsh=YW5xc2M1OXA3OThu" target="_blank" style="margin: 0 10px; color: #ffddee; font-weight: bold;">Instagram</a>
+    <a href="https://www.facebook.com/share/16w2cY7nX6/" target="_blank" style="margin: 0 10px; color: #ffddee; font-weight: bold;">Facebook</a>
+    <a href="http://tiktok.com/@gideonoo1" target="_blank" style="margin: 0 10px; color: #ffddee; font-weight: bold;">TikTok</a>
+  </div>
+
+  <p style="font-size: 0.9em; color: #ddd;">
+    © 2025 Souled-out Life. Built with purpose and prayer.
+  </p>
+</footer>
