--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
   </p>
 
   <p style="margin-bottom: 20px;">
-    📧 <a href="mailto:souledoutlife@gmail.com" style="color: #ffddee; text-decoration: underline;">souledoutlife@gmail.com</a>
+    📧 <a href="mailto:souledout326@gmail.com" style="color: #ffddee; text-decoration: underline;">souledout326@gmail.com</a>
   </p>
 
   <div style="margin-bottom: 20px;">
