--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
   </p>
 
   <form action="https://formspree.io/f/mwpnyngz" method="POST" style="display: flex; flex-direction: column; gap: 15px;">
+    <input type="hidden" name="_redirect" value="https://souledout326-stack.github.io/Souled-out-life-/thank-you.html">
     <label for="email" style="font-weight: bold;">Your email:</label>
     <input type="email" name="email" id="email" placeholder="you@example.com" required style="padding: 10px; border-radius: 6px; border: 1px solid #ccc;">
 
