--- a/email.html
+++ b/email.html
@@ -41,7 +41,7 @@
     <h2>📥 Get Your Free Devotional</h2>
     <p>Enter your email below and we’ll send you the download link.</p>
 
-    <form action="https://formspree.io/f/your-form-id" method="POST">
+    <form action="https://formspree.io/f/xqkwzjyz" method="POST">
       <input type="email" name="email" placeholder="Your email address" required>
       <input type="hidden" name="_redirect" value="https://souledout326-stack.github.io/Souled-out-life-/thank-you.html">
       <button type="submit">Submit</button>
