--- a/email.html
+++ b/email.html
@@ -1,51 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Get Your Free Devotional</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #fffaf3;
-      text-align: center;
-      padding: 60px;
-    }
-    .form-container {
-      background-color: #ffffff;
-      padding: 30px;
-      border-radius: 8px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.1);
-      max-width: 400px;
-      margin: auto;
-    }
-    input[type="email"] {
-      width: 90%;
-      padding: 12px;
-      margin: 10px 0;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-    }
-    button {
-      background-color: #4a148c;
-      color: white;
-      padding: 12px 24px;
-      border: none;
-      border-radius: 6px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-  </style>
-</head>
-<body>
-  <div class="form-container">
-    <h2>📥 Get Your Free Devotional</h2>
-    <p>Enter your email below and we’ll send you the download link.</p>
+<form id="devotionalForm">
+  <input type="email" name="email" placeholder="Your email address" required>
+  <button type="submit">Submit</button>
+</form>
 
-    <form action="https://formspree.io/f/mwpnyngz" method="POST">
-      <input type="email" name="email" placeholder="Your email address" required>
-      <input type="hidden" name="_redirect" value="https://souledout326-stack.github.io/Souled-out-life-/thank-you.html">
-      <button type="submit">Submit</button>
-    </form>
-  </div>
-</body>
-</html>
+<div id="thankYouMessage" style="display:none; margin-top:30px;">
+  <h2>🎉 Thank You!</h2>
+  <p>Your devotional is ready to download:</p>
+  <a href="https://souledout326-stack.github.io/Souled-out-life-/devotional.pdf" target="_blank" style="background-color:#4a148c; color:white; padding:12px 24px; border-radius:6px; text-decoration:none; font-weight:bold;">
+    📥 Download Devotional
+  </a>
+  <p style="margin-top:20px;">Redirecting to homepage in 10 seconds...</p>
+</div>
+
+<script>
+  document.getElementById('devotionalForm').addEventListener('submit', function(e) {
+    e.preventDefault();
+
+    // Send form data to Formspree
+    fetch("https://formspree.io/f/mwpnyngz", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({
+        email: this.email.value
+      })
+    }).then(() => {
+      // Hide form and show thank-you message
+      this.style.display = "none";
+      document.getElementById('thankYouMessage').style.display = "block";
+
+      // Redirect after 10 seconds
+      setTimeout(() => {
+        window.location.href = "https://souledout326-stack.github.io/Souled-out-life-/";
+      }, 10000);
+    });
+  });
+</script>
