--- a/email.html
+++ b/email.html
@@ -11,6 +11,7 @@
     <h2 style="color:#4a148c;">🎉 Thank You!</h2>
     <p>Your devotional is ready to download:</p>
     <a href="https://souledout326-stack.github.io/Souled-out-life-/devotional.pdf" target="_blank" class="download-button">
+    <img src="https://souledout326-stack.github.io/Souled-out-life-/devotional-cover.jpg" alt="Devotional Cover" style="max-width: 300px; border-radius: 12px; box-shadow: 0 0 20px rgba(0,0,0,0.2); margin-bottom: 20px;">
       📥 Download Devotional
     </a>
     <p style="margin-top:20px;">Redirecting to homepage in 10 seconds...</p>
