--- a/thank-you.html
+++ b/thank-you.html
@@ -2,14 +2,31 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Thank You!</title>
-  <meta http-equiv="refresh" content="10;url=https://souledout326-stack.github.io/Souled-out-life-/">
+  <title>Thank You – Souled-out Life</title>
+  <meta http-equiv="refresh" content="12;url=https://souledout326-stack.github.io/Souled-out-life-/">
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Segoe UI', sans-serif;
       background-color: #fffaf3;
       text-align: center;
-      padding: 60px;
+      padding: 60px 20px;
+      color: #4a148c;
+    }
+    .container {
+      max-width: 600px;
+      margin: auto;
+      background-color: #ffffff;
+      padding: 40px;
+      border-radius: 12px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.1);
+    }
+    .verse-box {
+      background-color: #f3e5f5;
+      padding: 20px;
+      border-radius: 8px;
+      margin-top: 30px;
+      font-style: italic;
+      color: #555;
     }
     .download-button {
       background-color: #4a148c;
@@ -19,18 +36,25 @@
       text-decoration: none;
       font-weight: bold;
       display: inline-block;
-      margin-top: 20px;
+      margin-top: 30px;
     }
   </style>
 </head>
 <body>
-  <h1>🎉 Thank You for Joining the Movement!</h1>
-  <p>Your devotional is ready to download:</p>
+  <div class="container">
+    <h1>💜 Thank You for Your Prayer Request</h1>
+    <p>We’ve received your message and are lifting you up in prayer. You are not alone — your heart matters here.</p>
 
-  <a href="https://souledout326-stack.github.io/Souled-out-life-/devotional.pdf" target="_blank" class="download-button">
-    📥 Download Devotional
-  </a>
+    <div class="verse-box">
+      “Cast all your anxiety on Him because He cares for you.”<br>
+      <strong>— 1 Peter 5:7</strong>
+    </div>
 
-  <p style="margin-top: 30px;">You’ll be redirected to our homepage in 10 seconds...</p>
+    <a href="https://souledout326-stack.github.io/Souled-out-life-/devotional.pdf" target="_blank" class="download-button">
+      📥 Download Devotional
+    </a>
+
+    <p style="margin-top: 20px; font-size: 0.9em;">You’ll be redirected to the homepage in a few seconds...</p>
+  </div>
 </body>
 </html>
