--- a/index.html
+++ b/index.html
@@ -130,13 +130,16 @@
     
   <section style="background-color: #f9f9f9; padding: 20px; border-radius: 8px;">
     
-  <section id="contact" style="background-color:#f3e5f5; padding:60px 20px; text-align:center;">
+<section id="contact" style="background-color:#f3e5f5; padding:60px 20px; text-align:center;">
   <h2 style="color:#4a148c; font-size:32px;">🙏 Submit a Prayer Request</h2>
-  <p style="font-size:18px; color:#555; max-width:600px; margin:auto;">
+
+  <!-- 💬 Encouraging Message BEFORE the Form -->
+  <p style="font-size:18px; color:#555; max-width:600px; margin: 0 auto 30px;">
     We believe in the power of prayer. Share your request below and we’ll stand with you in faith.
   </p>
 
-  <form id="prayerForm" style="margin-top:30px;">
+  <!-- 🙏 Prayer Form -->
+  <form id="prayerForm" style="margin-top:10px;">
     <input type="email" name="email" placeholder="Your email address (optional)" style="width:80%; padding:12px; margin:10px 0; border-radius:6px; border:1px solid #ccc;"><br>
     <textarea name="message" placeholder="Your prayer request..." required style="width:80%; height:120px; padding:12px; border-radius:6px; border:1px solid #ccc;"></textarea><br>
     <button type="submit" style="background-color:#4a148c; color:white; padding:12px 24px; border:none; border-radius:6px; font-weight:bold; cursor:pointer;">
@@ -144,9 +147,18 @@
     </button>
   </form>
 
+  <!-- 💜 Thank-You Message -->
   <div id="prayerThankYou" style="display:none; margin-top:30px;">
     <h3 style="color:#4a148c;">💜 Thank you</h3>
     <p>Your prayer request has been received. We’re lifting you up in faith and love.</p>
+
+    <!-- 📖 Scripture Verse -->
+    <div style="background-color:#f9f3ff; padding:20px; margin-top:20px; border-radius:8px; max-width:500px; margin-left:auto; margin-right:auto;">
+      <p style="font-style:italic; color:#555; font-size:16px;">
+        “Cast all your anxiety on Him because He cares for you.”<br>
+        <span style="font-weight:bold;">— 1 Peter 5:7</span>
+      </p>
+    </div>
   </div>
 </section>
 
