--- a/index.html
+++ b/index.html
@@ -103,7 +103,15 @@
   </p>
 
   <div style="display: flex; gap: 40px; flex-wrap: wrap; justify-content: center;">
-    <!-- I Believe -->
+    <div style="text-align: center; max-width: 220px;">
+  <strong>The Father You Never Knew</strong> – 2026<br>
+  <img src="COVER-IMAGE-URL-HERE" alt="The Father You Never Knew cover" width="200"><br>
+  <a href="https://a.co/d/00rtpn0Y" target="_blank" style="background-color: #d35400; color: white; padding: 10px 20px; text-decoration: none; border-radius: 4px; display: inline-block; margin-top: 10px;">
+    📖 Get it on Kindle
+  </a>
+</div>
+    
+   <!-- I Believe -->
     <div style="text-align: center; max-width: 220px;">
       <strong>I Believe</strong> – 2025<br>
       <img src="https://github.com/souledout326-stack/Souled-out-life-/blob/main/i%20believe%202.png?raw=true" alt="I Believe Book Cover" width="200"><br>
