--- a/index.html
+++ b/index.html
@@ -102,10 +102,9 @@
     Explore past releases and timeless truths from Souled-out Life.
   </p>
 
-  <div style="display: flex; gap: 40px; flex-wrap: wrap; justify-content: center;">
-    <div style="text-align: center; max-width: 220px;">
+  <div style="text-align: center; max-width: 220px;">
   <strong>The Father You Never Knew</strong> – 2026<br>
-  <img src="COVER-IMAGE-URL-HERE" alt="The Father You Never Knew cover" width="200"><br>
+  <img src="/attachments/veud5tZCxRD53RTwLMR5C.jpeg" alt="The Father You Never Knew cover" width="200"><br>
   <a href="https://a.co/d/00rtpn0Y" target="_blank" style="background-color: #d35400; color: white; padding: 10px 20px; text-decoration: none; border-radius: 4px; display: inline-block; margin-top: 10px;">
     📖 Get it on Kindle
   </a>
