--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
   <div style="text-align: center; max-width: 220px;">
   <strong>The Father You Never Knew</strong> – 2026<br>
-  <img src="/attachments/veud5tZCxRD53RTwLMR5C.jpeg" alt="The Father You Never Knew cover" width="200"><br>
+  <img src=https://github.com/souledout326-stack/Souled-out-life-/blob/main/Increase%20the%20resolut.png?raw=true alt="The Father You Never Knew cover" width="200"><br>
   <a href="https://a.co/d/00rtpn0Y" target="_blank" style="background-color: #d35400; color: white; padding: 10px 20px; text-decoration: none; border-radius: 4px; display: inline-block; margin-top: 10px;">
     📖 Get it on Kindle
   </a>
