--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
     Explore past releases and timeless truths from Souled-out Life.
   </p>
 
+
+  <div style="display: flex; gap: 40px; flex-wrap: wrap; justify-content: center;">
   <div style="text-align: center; max-width: 220px;">
   <strong>The Father You Never Knew</strong> – 2026<br>
   <img src=https://github.com/souledout326-stack/Souled-out-life-/blob/main/Increase%20the%20resolut.png?raw=true alt="The Father You Never Knew cover" width="200"><br>
