--- a/index.html
+++ b/index.html
@@ -48,10 +48,13 @@
 </section>
 
   <section>
-  <div style="text-align: center;">
-  <img src="https://github.com/souledout326-stack/Souled-out-life-/blob/main/i%20believe%202.png?raw=true" alt="I Believe Book Cover" width="200">
-  <p><a href="https://www.amazon.com/dp/B0FMHJFPQ1" target="_blank" style="background-color: #d35400; color: white; padding: 10px 20px; text-decoration: none; border-radius: 4px; display: inline-block;">📖 Get it on Kindle</a></p>
- 
+  <div style="text-align: center; max-width: 220px;">
+  <strong>The Father You Never Knew</strong> – 2026<br>
+  <img src=https://github.com/souledout326-stack/Souled-out-life-/blob/main/Increase%20the%20resolut.png?raw=true alt="The Father You Never Knew cover" width="200"><br>
+  <a href="https://a.co/d/00rtpn0Y" target="_blank" style="background-color: #d35400; color: white; padding: 10px 20px; text-decoration: none; border-radius: 4px; display: inline-block; margin-top: 10px;">
+    📖 Get it on Kindle
+  </a>
+  </div>
    <section id="weekly-message">
   </section>
 <hr style="border: none; height: 1px; background-color: #ccc; margin: 40px 0;">
