--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     📖 Get it on Kindle
   </a>
   </div>
-  
+  </div> 
 <section id="weekly-message">
   </section>
 <hr style="border: none; height: 1px; background-color: #ccc; margin: 40px 0;">
