--- a/index.html
+++ b/index.html
@@ -89,12 +89,21 @@
 ">
   <div style="background-color: rgba(0,0,0,0.4); padding: 20px; border-radius: 8px;">
     <h3 style="font-size: 2em; margin-bottom: 15px;">Grace in the Middle</h3>
+
     <p style="font-size: 1.2em; line-height: 1.8;">
       This week, remember that grace doesn’t wait for perfection — it meets us in the middle of our mess. Whether you’re tired, uncertain, or just holding on, His strength is made perfect in weakness.
     </p>
+
     <p style="font-style: italic; margin-top: 15px;">2 Corinthians 12:9</p>
+
+    <p style="font-size: 1.2em; line-height: 1.8; margin-top: 20px;">
+      “The Lord is close to the brokenhearted and saves those who are crushed in spirit.”
+    </p>
+
+    <p style="font-style: italic; margin-top: 10px;">Psalm 34:18</p>
   </div>
 </div>
+
   
 <hr style="border: none; height: 1px; background-color: #ccc; margin: 40px 0;">
   
