--- a/index.html
+++ b/index.html
@@ -91,10 +91,8 @@
     <h3 style="font-size: 2em; margin-bottom: 15px;">Grace in the Middle</h3>
 
     <p style="font-size: 1.2em; line-height: 1.8;">
-      This week, remember that grace doesn’t wait for perfection — it meets us in the middle of our mess. Whether you’re tired, uncertain, or just holding on, His strength is made perfect in weakness.
+      “Even in the moments you feel unseen or overwhelmed, God draws near. He meets you in the places you break, and His presence becomes the strength that carries you forward.”
     </p>
-
-    <p style="font-style: italic; margin-top: 15px;">2 Corinthians 12:9</p>
 
     <p style="font-size: 1.2em; line-height: 1.8; margin-top: 20px;">
       “The Lord is close to the brokenhearted and saves those who are crushed in spirit.”
